Fix rotated image previews being clipped
Scale down 90/270 rotated images to fit within preview container
since aspect ratio changes when image is rotated sideways.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1104,8 +1104,14 @@ tr:hover td {
   z-index: 10;
 }
 
+.preview-item.rotated-90 img,
+.preview-item.rotated-270 img {
+  object-fit: contain;
+  transform-origin: center center;
+}
+
 .preview-item.rotated-90 img {
-  transform: rotate(90deg);
+  transform: rotate(90deg) scale(0.75);
 }
 
 .preview-item.rotated-180 img {
@@ -1113,7 +1119,7 @@ tr:hover td {
 }
 
 .preview-item.rotated-270 img {
-  transform: rotate(270deg);
+  transform: rotate(270deg) scale(0.75);
 }
 
 .year-toolbar {
